# kaleidoscope

./: .clang-tidy  .gitignore  README.org  meson.build
.github/workflows/: main.yml
include/: ast.hpp  collector.hpp  default_ir_visitor.hpp  ir_visitor.hpp  llvm_ir_visitor.hpp  meson.build  parser.hpp  token.hpp  tokenizer.hpp  utils.hpp
src/: main.cpp  meson.build  stream.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp
test/: ast.cpp  meson.build  tokenizer.cpp
